this is homework version

--- a/xv6-public-xv6-rev9/Makefile
+++ b/xv6-public-xv6-rev9/Makefile
@@ -178,6 +178,7 @@ UPROGS=\
 	_test-thread\
 	_ps\
 	_test-prio_sched\
+	_prio-sched\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
